# SunlightHours

./: CMakeLists.txt  README.md  bad_format1.json  bad_format2.json  bad_format3.json  test.json
api/: CMakeLists.txt
api/include/public/: Constants.h  SunlightHours.h  SunlightHoursException.h
api/src/: SunlightHours.cpp
city/: CMakeLists.txt
city/include/public/: Building.h  City.h  Constants.h  InvalidValuesException.h  Neighborhood.h
city/src/: Building.cpp  City.cpp  Neighborhood.cpp
include/public/: Exception.h
parser/: CMakeLists.txt
parser/include/public/: JsonParser.h  Parser.h  ParserException.h  ParserManager.h
parser/src/: JsonParser.cpp  ParserManager.cpp
src/: main.cpp
sunlighthours/: CMakeLists.txt
